# dnn

./: .gitignore  CMakeLists.txt  demo.cc
model/: params-10eps.docx  params.docx
src/: CMakeLists.txt  layer.h  network.cc  network.h  utils.h
src/layer/: conv.cc  conv.h
src/layer/kernels/: kernels.cu  kernels.h
